--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
     <head>
         <title>Home</title>
+        <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
@@ -10,121 +12,57 @@
             body{
                 -webkit-font-smoothing: antialiased;
                 -moz-osx-font-smoothing: grayscale;
-                margin: 0;
                 font-family: 'Lato', sans-serif;
             }
             button{
                 font-family: 'Lato', sans-serif;
             }
-            .bg-gray-900 {
-                background-color: #121826;
-            }
-            .text-white {
-                color: #fff;
-            }
-            .block {
-                display: block;
-            }
-            .inline-block {
-                display: inline-block;
-            }
-            .inline {
-                display: inline;
-            }
-            .hidden {
-                display: none;
-            }
-            .flex {
-                display: flex;
-            }
-            .justify-between {
-                justify-content:space-between;
-            }
-            .justify-center {
-                justify-content: center;
-            }
-            .items-center {
-                align-items: center;
-            }
-            .gap-4 {
-                gap: 1rem;
-            }
-            .m-4{
-                margin: 0.7rem;
-            }
-            .p-4{
-                padding: 0.5rem;
-            }
-            .py-4{
-                padding: 1rem 0.5rem;
-            }
-            .px-6{
-                padding: 0.5rem 1rem;
-            }
-            .font-lato{
-                font-family: 'Lato', sans-serif;
-            }
-            .no-underline{
-                text-decoration: none;
-            }
-            .bg-brand-teal{
-                background-color: #539D98;
-            }
-            .border-none{
-                border: none;
-            }
-            .rounded-full{
-                border-radius: 99999px;
-            }
-            .bold{
-                font-weight: bold;
-            }
-            .uppercase{
-                text-transform: uppercase;
-            }
-            .test-sm{
-                font-size: 14px;
-            }
-            .text-spaced{
-                letter-spacing: 1px;
-            }
-            .w-full{
-                width: 100%;
-            }
-            .relative{
-                position: relative;
-            }
-            .z-10{
-                z-index: 10;
-            }
         </style>
     </head>
-    <body >
-        <header class="flex justify-between p-4 relative z-10">
-            <div class="flex items-center m-4">
-                <img src="./img/logo.svg" class="text-white no-underline" alt="logo" style="margin-right: 50px;" />
-                <a href="" class="text-white p-4 no-underline" >Pricing</a>
-                <a href="" class="text-white p-4 no-underline" >Courses</a>
-                <a href="" class="text-white p-4 no-underline" >Blog</a>
-                <a href="" class="text-white p-4 no-underline" >Forum</a>
+    <body class="bg-gray-900">
+        <header class="flex justify-between relative z-10 py-18 mx-auto " style="max-width:1200px;">
+            <div class="flex items-center m-4 text-white">
+                <img src="./img/logo.svg" class="mr-8" alt="logo"  />
+                <nav class="hidden md:block">
+                    <a href="" class="p-4 no-underline" >Pricing</a>
+                    <a href="" class="p-4 no-underline" >Courses</a>
+                    <a href="" class="p-4 no-underline" >Blog</a>
+                    <a href="" class="p-4 no-underline" >Forum</a>
+                </nav>
             </div>
-            <div class="flex items-center m-4">
-                <a href="" class="text-white p-4 no-underline" style="margin-right: 30px;" >Login</a>
-                <button class="text-white bg-brand-teal border-none rounded-full px-6 bold uppercase test-sm text-spaced"  >Sign Up</button>
+            <svg xmlns="http://www.w3.org/2000/svg"
+            fill="none" viewBox="0 0 24 24"
+            stroke-width="1.5" stroke="currentColor" class="w-6 h-6 md:hidden m-4 mr-8 text-white">
+                <path stroke-linecap="round" stroke-linejoin="round" 
+                d="M3.75 5.25h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5" />
+            </svg>
+            <div class="items-center m-4 text-white hidden md:flex">
+                <a href="" class="p-4 no-underline mr-5">Login</a>
+                <button class="bg-teal-500 border-none rounded-full px-6 py-2 font-bold uppercase test-sm text-spaced"  >Sign Up</button>
             </div>
         </header>
-        <section class="relative" style="top:-82px">
+        <section class="relative "  >
             <video 
                 loop="loop" 
-                autoplay="autoplay" 
-                playsinline="" 
+                autoplay="autoplay"
                 muted="muted" 
-                class="w-full h-full object-cover" 
-                style="min-height: 550px;"
-                src="https://chriscourses.com/_nuxt/videos/galaxy.b6c8fb5.mp4">
+                class="w-full object-cover absolute" 
+                style="min-height: 689px; top:-88px"
+                src="/video/hero.mp4">
             </video>
+            <div style="max-width:1200px; margin: 0 auto;">
+                <div class="text-white absolute ml-6  mt-24" >   
+                    <h1 class="text-3xl  font-bold sm:text-6xl leading-none">
+                        Turbocharge your <br/><span class="text-teal-500">development career</span></h1>
+                        <p class="text-xs sm:text-xl mt-7">
+                            Chris Courses provides students and professionals<br/> a college-level
+                            web development education.
+                        </p>
+                        <button class="border-none bg-white text-teal-600 w-full sm:w-auto mt-7 px-6 py-3 rounded-md" 
+                        >Get started</button>
+                    </div>
+            </div>
         </section>
-            <h1>Home</h1>
         <p>Home page content goes here.</p>
     </body>
 </html> 
