--- a/index.html
+++ b/index.html
@@ -1,68 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Home</title>
-        <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-        <meta charset="utf-8">
-        <style>
-            body{
-                -webkit-font-smoothing: antialiased;
-                -moz-osx-font-smoothing: grayscale;
-                font-family: 'Lato', sans-serif;
-            }
-            button{
-                font-family: 'Lato', sans-serif;
-            }
-        </style>
-    </head>
-    <body class="bg-gray-900">
-        <header class="flex justify-between relative z-10 py-18 mx-auto " style="max-width:1200px;">
-            <div class="flex items-center m-4 text-white">
-                <img src="./img/logo.svg" class="mr-8" alt="logo"  />
-                <nav class="hidden md:block">
-                    <a href="" class="p-4 no-underline" >Pricing</a>
-                    <a href="" class="p-4 no-underline" >Courses</a>
-                    <a href="" class="p-4 no-underline" >Blog</a>
-                    <a href="" class="p-4 no-underline" >Forum</a>
-                </nav>
+  <head>
+    <title>Home</title>
+    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <meta charset="utf-8" />
+    <style>
+      body {
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        font-family: "Lato", sans-serif;
+      }
+      button {
+        font-family: "Lato", sans-serif;
+      }
+    </style>
+  </head>
+  <body class="bg-gray-900">
+      <header class="absolute  w-full">
+        <div class="bg-gradient-to-b from-black to-transparent opacity-60 inset-0 absolute z-10 hidden sm:block"></div> 
+        <section class="container mx-auto flex justify-between py-18">
+        <div class="flex items-center m-4 text-white z-20">
+          <img src="./img/logo.svg" class="mr-8" alt="logo" />
+          <nav class="hidden md:block">
+            <a href="" class="p-4 no-underline">Pricing</a>
+            <a href="" class="p-4 no-underline">Courses</a>
+            <a href="" class="p-4 no-underline">Blog</a>
+            <a href="" class="p-4 no-underline">Forum</a>
+          </nav>
+        </div>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="w-6 h-6 md:hidden m-4 mr-8 z-20 text-white"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M3.75 5.25h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5"
+          />
+        </svg>
+        <div class="items-center m-4 text-white hidden md:flex z-10">
+          <a href="" class="p-4 no-underline mr-5">Login</a>
+          <button
+            class="bg-teal-500 border-none rounded-full px-6 py-2 font-bold uppercase test-sm text-spaced"
+          >
+            Sign Up
+          </button>
+        </div>
+      </section>
+    </header>
+    <section id="heroSection" class="relative">
+      <div
+        class="bg-black opacity-50 w-full h-[400px] sm:hidden absolute z-10"
+      ></div>
+      <video
+        loop="loop"
+        autoplay="autoplay"
+        muted="muted"
+        class="w-full object-cover absolute h-[400px] sm:h-[600px] md:h-[700px] z-0"
+        src="/video/hero.mp4"
+      ></video>
+      <div id="heroSectionContent" class="container mx-auto relative z-20 h-[400px] sm:h-[600px] md:h-[700px] flex items-center">
+        <div class="text-white absolute ml-6 mt-24">
+          <h1 class="text-3xl font-bold sm:text-6xl leading-none">
+            Turbocharge your <br /><span class="text-teal-500"
+              >development career</span
+            >
+          </h1>
+          <p class="text-xs sm:text-xl mt-7">
+            Chris Courses provides students and professionals<br />
+            a college-level web development education.
+          </p>
+          <button
+            class="border-none bg-white text-teal-600 w-full sm:w-auto mt-7 px-6 py-3 rounded-md">
+            Get started
+          </button>
+        </div>
+      </div>
+    </section>
+    <section>
+        <div class=" flex justify-center m-9 flex-col sm:flex-row">
+            <div class="bg-slate-800 px-16 py-5 rounded-t-lg sm:border-t-none sm:rounded-l-lg">
+                <h2 class="text-violet-700 text-5xl text-center       ">84</h2>
+                <p class="text-white text-center">Lessons</p>
             </div>
-            <svg xmlns="http://www.w3.org/2000/svg"
-            fill="none" viewBox="0 0 24 24"
-            stroke-width="1.5" stroke="currentColor" class="w-6 h-6 md:hidden m-4 mr-8 text-white">
-                <path stroke-linecap="round" stroke-linejoin="round" 
-                d="M3.75 5.25h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5" />
-            </svg>
-            <div class="items-center m-4 text-white hidden md:flex">
-                <a href="" class="p-4 no-underline mr-5">Login</a>
-                <button class="bg-teal-500 border-none rounded-full px-6 py-2 font-bold uppercase test-sm text-spaced"  >Sign Up</button>
+            <div class=" bg-slate-800 border-l border-gray-700 px-16 py-5 ">
+                <h2 class="text-violet-700 text-5xl text-center">29</h2>
+                <p class="text-white text-center">Hours of Content</p>
             </div>
-        </header>
-        <section class="relative "  >
-            <video 
-                loop="loop" 
-                autoplay="autoplay"
-                muted="muted" 
-                class="w-full object-cover absolute" 
-                style="min-height: 689px; top:-88px"
-                src="/video/hero.mp4">
-            </video>
-            <div style="max-width:1200px; margin: 0 auto;">
-                <div class="text-white absolute ml-6  mt-24" >   
-                    <h1 class="text-3xl  font-bold sm:text-6xl leading-none">
-                        Turbocharge your <br/><span class="text-teal-500">development career</span></h1>
-                        <p class="text-xs sm:text-xl mt-7">
-                            Chris Courses provides students and professionals<br/> a college-level
-                            web development education.
-                        </p>
-                        <button class="border-none bg-white text-teal-600 w-full sm:w-auto mt-7 px-6 py-3 rounded-md" 
-                        >Get started</button>
-                    </div>
+            <div class=" bg-slate-800 border-l border-gray-700 px-16 py-5 rounded-b-lg  sm:rounded-b-none sm:rounded-r-lg">
+                <h2 class="text-violet-700 text-5xl text-center">5095</h2>
+                <p class="text-white text-center">Students</p>
             </div>
-        </section>
-        <p>Home page content goes here.</p>
-    </body>
-</html> 
+        </div>
+        <p class="text-gray-400 text-center">Metrics update real-time</p>
+    </section>
+  </body>
+</html>
